# thermalFVM

./: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  README.md
CMakeModules/: CodeCoverage.cmake
UnitTests/: HTCDittusBoelterTest.cpp  HTCDittusBoelter_test  HTCTest.cpp  HTC_test  heatFluxTest.cpp  heatFlux_test  radiationTest.cpp  radiation_test  temperatureTest.cpp  temperature_test  thermalDOFTest.cpp  thermalTest.cpp  thermal_test
UnitTests/inputs/: box.msh  box.ods  sensor.msh  sensor2.msh  sensor3.msh  unobtanium.txt
doc/: Doxyfile  Doxyfilee
src/: license.txt  main.cpp  thermal.cpp  thermal.h  thermalDOF.cpp  thermalDOF.h
src/bc/: HTC.cpp  HTC.h  HTCDittusBoelter.cpp  HTCDittusBoelter.h  heatFlux.cpp  heatFlux.h  radiation.cpp  radiation.h  temperature.cpp  temperature.h
src/impl/: thermalFVMConfig.h  thermalFVMConfig.h.in
